<resources>
    <string name="app_name">eMandi</string>
    <string name="welcome">Welcome!</string>
    <string name="all_orders">All Orders</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="qty">Qty</string>
    <string name="no_records_found">No Records Found!</string>
    <string name="cart">Cart</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="item_total">Item Total</string>
    <string name="discount">Discount</string>
    <string name="rupee_0">₹ 0.0</string>
    <string name="items_0">0 ITEMS</string>
    <string name="taxes">Taxes</string>
    <string name="final_amount">Final Amount</string>
    <string name="place_order">Place Order</string>
    <string name="order_placed">Order Placed</string>
    <string name="your_order_was_placed_successfully">Your order was placed successfully</string>
    <string name="view_all_order">View All Order</string>
    <string name="go_home">Go Home</string>
    <string name="order_no">Order No</string>
</resources>