<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    tools:context=".ui.view.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_title"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/size_16dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_32dp"
                android:text="@string/welcome"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="@dimen/size_20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_all_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_orders"
                android:textAllCaps="false"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/size_16sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/size_4dp"
        android:layout_marginBottom="@dimen/size_4dp"
        android:background="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cv_bottom"
        app:layout_constraintTop_toBottomOf="@+id/cv_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingLeft="@dimen/size_16dp"
        android:paddingTop="@dimen/size_8dp"
        android:paddingRight="@dimen/size_16dp"
        android:paddingBottom="@dimen/size_8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_corners"
            android:padding="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:layout_marginBottom="@dimen/size_8dp"
            android:layout_marginLeft="@dimen/size_16dp"
            android:layout_marginRight="@dimen/size_16dp">

            <TextView
                android:id="@+id/tv_total_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_8dp"
                android:layout_marginTop="@dimen/size_4dp"
                android:text="@string/items_0"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupee_0"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/tv_total_items"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_items" />

            <TextView
                android:id="@+id/tv_add_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold"
                android:drawableRight="@drawable/white_right_arrow_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_no_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_32dp"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/size_16sp"
        android:visibility="gone"
        android:text="@string/no_records_found"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_title"
        app:layout_constraintBottom_toTopOf="@id/cv_bottom" />



</androidx.constraintlayout.widget.ConstraintLayout>