<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    tools:context=".ui.view.CartActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_title"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/size_16dp"
            android:paddingBottom="@dimen/size_16dp"
            android:paddingRight="@dimen/size_16dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/size_48dp"
                android:layout_height="@dimen/size_40dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_left_48"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_32dp"
                android:text="@string/cart"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="@dimen/size_20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/iv_back"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_cart"
                android:textAllCaps="false"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/size_16sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/size_16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/size_16dp"
            android:paddingBottom="@dimen/size_16dp"
            android:paddingRight="@dimen/size_16dp">


            <TextView
                android:id="@+id/tv_item_total"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_32dp"
                android:text="@string/item_total"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/size_20sp"
                android:layout_marginLeft="@dimen/size_16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_item_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_32dp"
                android:text="@string/rupee_0"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/size_20sp"
                android:layout_marginRight="@dimen/size_16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_item_total"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_32dp"
                android:text="@string/discount"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/size_20sp"
                android:layout_marginTop="@dimen/size_4dp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_item_total"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_total" />

            <TextView
                android:id="@+id/tv_discount_amount"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_32dp"
                android:text="@string/rupee_0"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/size_20sp"
                android:layout_marginRight="@dimen/size_16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_discount"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_taxes"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_32dp"
                android:text="@string/taxes"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/size_20sp"
                android:layout_marginTop="@dimen/size_4dp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_discount"
                app:layout_constraintTop_toBottomOf="@+id/tv_discount" />

            <TextView
                android:id="@+id/tv_taxes_amount"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_32dp"
                android:text="@string/rupee_0"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/size_20sp"
                android:layout_marginRight="@dimen/size_16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_taxes"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_final"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_32dp"
                android:text="@string/final_amount"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_20sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/size_8dp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_taxes"
                app:layout_constraintTop_toBottomOf="@+id/tv_taxes" />

            <TextView
                android:id="@+id/tv_final_amount"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_32dp"
                android:text="@string/rupee_0"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="@dimen/size_20sp"
                android:layout_marginRight="@dimen/size_16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_final"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_4dp"
        android:background="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cv_bottom"
        app:layout_constraintTop_toBottomOf="@+id/cv_details" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingLeft="@dimen/size_16dp"
        android:paddingTop="@dimen/size_8dp"
        android:paddingRight="@dimen/size_16dp"
        android:paddingBottom="@dimen/size_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_corners"
            android:padding="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:layout_marginBottom="@dimen/size_8dp"
            android:layout_marginLeft="@dimen/size_16dp"
            android:layout_marginRight="@dimen/size_16dp">

            <TextView
                android:id="@+id/tv_total_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_8dp"
                android:layout_marginTop="@dimen/size_4dp"
                android:text="@string/items_0"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupee_0"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/tv_total_items"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_items" />

            <TextView
                android:id="@+id/tv_add_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_order"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_no_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_32dp"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/size_16sp"
        android:visibility="gone"
        android:text="@string/no_records_found"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_title"
        app:layout_constraintBottom_toTopOf="@id/cv_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>